<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_value"
            android:icon="@drawable/ic_menu1"
            android:title="@string/menu_item_1" />
        <item
            android:id="@+id/nav_copy"
            android:icon="@drawable/ic_menu2"
            android:title="@string/menu_item_2" />
        <item
            android:id="@+id/nav_protect"
            android:icon="@drawable/ic_menu3"
            android:title="@string/menu_item_4" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu4"
            android:title="@string/menu_item_6" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu5"
            android:title="@string/menu_item_7" />
    </group>
</menu>
