<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainLayout_background"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/title_color" />


    <LinearLayout style="@style/Main_blocks">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_category1"
                    style="@style/Main_text.HeaderText"
                    android:background="@drawable/ic_main1"
                    android:text="@string/activity_main_category1" />

                <TextView
                    android:id="@+id/text_value_name1"
                    style="@style/Main_text.ValueText"
                    android:text="@string/value_rub" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_time1"
                    style="@style/Main_text"
                    android:text="@string/main_layout_today" />

                <TextView
                    android:id="@+id/text_count1"
                    style="@style/Main_text.CountText"
                    android:text="0,00" />
            </LinearLayout>

            <View style="@style/BlocksLine_Style" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_time2"
                    style="@style/Main_text"
                    android:text="@string/activity_main_interval_week" />

                <TextView
                    android:id="@+id/text_count2"
                    style="@style/Main_text.CountText"
                    android:text="0,00" />
            </LinearLayout>

            <View style="@style/BlocksLine_Style" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_time3"
                    style="@style/Main_text"
                    android:text="@string/activity_main_interval_month" />

                <TextView
                    android:id="@+id/text_count3"
                    style="@style/Main_text.CountText"
                    android:text="0,00" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_add1"
            style="@style/Main_buttons"
            android:background="@drawable/button_add1" />

    </LinearLayout>

    <LinearLayout style="@style/Main_blocks">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_category2"
                    style="@style/Main_text.HeaderText"
                    android:background="@drawable/ic_main2"
                    android:text="@string/activity_main_category2" />

                <TextView
                    android:id="@+id/text_value_name2"
                    style="@style/Main_text.ValueText"
                    android:text="@string/value_rub" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_time4"
                    style="@style/Main_text"
                    android:text="@string/activity_main_interval_month" />

                <TextView
                    android:id="@+id/text_count4"
                    style="@style/Main_text.CountText"
                    android:text="0,00" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_add2"
            style="@style/Main_buttons"
            android:background="@drawable/button_add2" />
    </LinearLayout>

    <LinearLayout style="@style/Main_blocks">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_category3"
                    style="@style/Main_text.HeaderText"
                    android:background="@drawable/ic_main3"
                    android:text="@string/activity_main_category3" />

                <TextView
                    android:id="@+id/text_value_name3"
                    style="@style/Main_text.ValueText"
                    android:text="@string/value_rub" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_time5"
                    style="@style/Main_text"
                    android:text="@string/activity_main_interval_all" />

                <TextView
                    android:id="@+id/text_count5"
                    style="@style/Main_text.CountText"
                    android:text="0,00" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_add3"
            style="@style/Main_buttons"
            android:background="@drawable/button_add3" />
    </LinearLayout>

    <LinearLayout
        style="@style/Main_bottom_block"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_all_consumption"
                style="@style/Main_buttons_bottom"
                android:background="@drawable/button_main1" />

            <TextView
                android:id="@+id/text_button_main1"
                style="@style/Main_bottom_text"
                android:text="@string/button_main1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_all_income"
                style="@style/Main_buttons_bottom"
                android:background="@drawable/button_main2" />

            <TextView
                android:id="@+id/text_button_main_2"
                style="@style/Main_bottom_text"
                android:text="@string/button_main2" />
        </LinearLayout>
    </LinearLayout>
</android.widget.LinearLayout>