<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainLayout_background"
    android:orientation="vertical"
    tools:context=".ValueActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorLight" />

    <LinearLayout
        style="@style/Value_blocks"
        android:background="@color/colorLight"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            style="@style/Value_text_header"
            android:text="@string/main_value" />

        <LinearLayout
            android:id="@+id/value_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="openValueList"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                style="@style/Value_text_name"
                android:text="@string/value_full_rub" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_open_orange" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/Value_blocks_little">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Value_text_small"
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/value_rub" />

            <TextView
                style="@style/Value_text_small_name"
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/value_full_rub" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="1000" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text=">" />
    </LinearLayout>

</android.widget.LinearLayout>